# plywise

./: .gitignore  CMakeLists.txt  README.md  RESTRUCTURE_PLAN.md  restructure-plan.html
.github/workflows/: ci.yml
include/pct/analysis/: analyzer.hpp
include/pct/app/: ingest_manager.hpp  job_manager.hpp  repository.hpp
include/pct/import/: chesscom_archive_client.hpp  import_service.hpp
include/pct/service/: http_server.hpp
include/pct/storage/: event_log.hpp
scripts/: security-check.sh
src/: main.cpp
src/analysis/: analyzer.cpp
src/app/: ingest_manager.cpp  job_manager.cpp  repository.cpp
src/import/: chesscom_archive_client.cpp  import_service.cpp
src/service/: http_server.cpp
src/storage/: event_log.cpp
tests/: analysis_tests.cpp  chesscom_api_tests.cpp  chesscom_archive_tests.cpp  chesscom_repository_tests.cpp  ingest_manager_tests.cpp  job_tests.cpp  repository_tests.cpp
web/: package.json
web/public/pieces/: ASSET_AUDIT.md
web/public/pieces/lasker/: ATTRIBUTION.md
web/src/: api.ts  chess.ts  insights.ts  main.ts  review.ts  styles.css  types.ts
web/src/design/: tokens.css
web/src/review/: state-machine.ts
web/tests/: chess-geometry.test.ts  insights.test.ts  review-state.test.ts
